--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,1 +1,157 @@
+html {
+    height: 100%;
+    width: 100%;
+    font-family: "Titillium Web", sans-serif;
+  }
+
+#title {
+  color: white;
+  font-family: fantasy;
+  /* Filter: DropShadow(Color = #000000, OffX = 2, OffY = 2, Positive = 1); */
+  text-align: center;
+  padding: 5px;
+}
+
+#pick-fighter {
+  color: white;
+  font-family: fantasy;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  font-family: fantasy;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  background-color: #ff3a3a;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #000000;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+/* This the effect that will happen to the (x) when hovering over it */
+.close:hover, .close:focus {
+  color: whitesmoke;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+  /* #main-service {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #333;
+    background: rgba(255, 255, 255, 0.3);
+    padding: 15px 20px 18px 18px;
+    border-radius: 5px;
+    box-shadow: 2px 5px 5px #333;
+  } */
+
+  body {
+    background-image: url("https://wallpaper.wiki/wp-content/uploads/2017/06/The-Avengers-Logo-Wallpaper-HD.jpg");
+    background-size: cover;
+    background-repeat:repeat;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+  }
+
+  /* #captain {
+    padding-top: 30px;
+  } */
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+/* .column {
+  border: 1px solid #333;
+    background: rgba(255, 96, 96, 0.3);
+  box-shadow: 2px 5px 5px #333;
+} */
+
+/* Clear floats after image containers */
+.row {
+  display:grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-auto-rows: minmax(10px, 10px);
+  grid-gap: 10px;
+}
+
+img:hover {
+  opacity:0.8;
+}
+
+button {
+  display:block;
+  width: 90%;
+  padding: 8px 8px;
+  color:white;
+  background:rgb(255, 45, 45);
+  text-align: center;
+  margin-left: 85px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button:hover {
+  color:red;
+  background:cornsilk;
+}
+
+img:hover, img:focus, img:active {
+  /* box-shadow:0, 0 20px, crimson; */
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition-duration: 2s;
+}
+
+#find {
+  color: red;
+  font-family: fantasy;
+  font-weight: bold;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* border: 1px solid rgb(255, 255, 255); */
+  /* background: rgba(79, 82, 255, 0.3);
+  padding: 15px 20px 18px 18px;
+  border-radius: 5px; */
+  box-shadow: 2px 5px 5px #333;
+}
+
+/* img {
+  border: 1px solid #333;
+  background: rgba(255, 96, 96, 0.3);
+  box-shadow: 2px 5px 5px #333;
+} */
+
 
